/report testing and docs
